--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "scripts": {
     "develop": "ts-node source/index.ts",
     "build": "tsc --project tsconfig-build.json",
+    "lint": "eslint --ext .ts source",
+    "lint:fix": "eslint --fix --ext .ts source",
     "prepare": "tsc --project tsconfig-build.json"
   },
   "eslintConfig": {
@@ -18,12 +20,16 @@
     }
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.9.1",
-    "@typescript-eslint/parser": "^5.9.1",
-    "eslint": "^8.6.0",
-    "eslint-config-ziphil": "^1.2.0",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jsdoc": "^36.1.1",
+    "@typescript-eslint/eslint-plugin": "^5.27.1",
+    "@typescript-eslint/eslint-plugin-tslint": "^5.27.1",
+    "@typescript-eslint/parser": "^5.27.1",
+    "eslint": "^8.17.0",
+    "eslint-config-ziphil": "^1.5.2",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsdoc": "^39.3.2",
+    "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-react-hooks": "^4.5.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.4"
